[gd_scene load_steps=8 format=2]

[ext_resource path="res://data/Resources/Sprites/Background/background.png" type="Texture" id=1]
[ext_resource path="res://data/Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://data/Resources/Fonts/pixel_unicode/Pixel-UniCode.ttf" type="DynamicFontData" id=3]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.183432, 1 )
colors = PoolColorArray( 0.0606061, 0.0606061, 0.0606061, 1, 0, 0, 0, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 2 )

[sub_resource type="Environment" id=1]
resource_local_to_scene = true
background_mode = 4
glow_enabled = true
glow_levels/2 = true
glow_levels/3 = false
glow_levels/5 = false
glow_intensity = 1.0
glow_bicubic_upscale = true
adjustment_enabled = true
adjustment_color_correction = SubResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}
fire_rate = 0.3

[node name="Background" type="Sprite" parent="."]
self_modulate = Color( 1.5, 1.5, 1.5, 1 )
texture = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Ship_holder" type="Node2D" parent="."]

[node name="bullet_holder" type="Node2D" parent="."]

[node name="Enemy_holder" type="Node2D" parent="."]

[node name="asteroid_holder" type="Node2D" parent="."]

[node name="PowerUps" type="Node2D" parent="."]

[node name="LifeHolder" type="Node2D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Score" type="RichTextLabel" parent="."]
margin_left = -20.0
margin_top = -98.0
margin_right = 20.0
margin_bottom = -81.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]0"
text = "0"
scroll_active = false

[node name="ShipSoundPlayer" type="AudioStreamPlayer" parent="."]
bus = "Ship"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
